--- a/index.html
+++ b/index.html
@@ -909,7 +909,8 @@ function fbLogout() {
 <fb:login-button
 id="login" 
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
-onclick = "login()" >
+
+onclick = "window.location.reload();" >
 </fb:login-button>
 
 <!-- <button 
