--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@ function fbLogout() {
 id="login" 
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
 
-onclick = "window.location.reload();" >
+onclick = "window.reload();" >
 </fb:login-button>
 
 <!-- <button 
