--- a/index.html
+++ b/index.html
@@ -158,9 +158,11 @@ document.getElementById('logout').style.visibility = 'hidden';
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
 			document.getElementById('status').innerHTML = 'we are not logged in';
+			    document.getElementById('login').style.visibility = 'visable';
     }
 			else {
 				document.getElementById('status').innerHTML = ' You are not logged into facebook';
+				    document.getElementById('login').style.visibility = 'visable';
       }
 
   	});
@@ -240,102 +242,6 @@ function statement(){
 }// end of statement function
 
 //============================================================== 
-
-
-// //SCREEN 4
-// //==============================================================
-
-// function pageLikes(){
-
-// 	console.log("You clicked");
-
-//    document.getElementById('status').style.visibility = 'hidden';
-//     var rect = canvas.append("rect")
-//         .attr("x", 0)
-//         .attr("y", 0)
-//         .attr("width", width)
-//         .attr("height", 1000)
-//         .style("fill", "white");
-
-//     function generateCoords() {
-// 		var x = Math.floor(Math.random() * (width-50)) + 1;
-// 		var y = Math.floor(Math.random() * (height-50)) + 1;
-// 		return [x, y];
-// 	}
-
-
-//      FB.api('/me', 'GET', {fields: 'likes'}, 
-     	
-//      	function(response) {
-// var info = response.likes; 
-// var info2 = info.data;
-// 			//console testing   
-//      		//console.log(response.likes);
-//      		//console.log(info2);
-//      		//console.log(info2.name);
-
-// var yIndex = 1; 
-
-// for (var i = 0; i < info2.length; i++) {
-// 	console.log(info2[i].name);
-// 	yIndex++; 
-
-// 	var text = canvas.append("text")
-// 		.attr("x", 10 )// x coordinate of text
-// 		.attr("y", 20 * yIndex) // y coordinate of text -- controls it showing a lisy currently 
-// 		.text(info2[i].name); 
-
-// 			//transistion variable 
-// 			var t = d3.transition()
-//    				.duration(10)
-
-
-// 			for(j=0; j < info2.length; j++){
-// 				d3.selectAll("text")
-// 				.style("opacity", 0)
-// 				.transition()
-// 				.delay(function(d,i){ return 100*i; }) //controls how many come on the screen
-//  				.duration(10) //controls how fast is changes opacity
-// 				.style("opacity", 1.0)
-// 			}// end of for (j) loop 
-
-// };//end of for loop  
-     
-
-//   });//end of fb api function 
-
-//        var button5 = canvas.append("svg:image")
-//         .attr('x', width - 300)
-//         .attr('y', 20)
-//         .attr('width', 300)
-//         .attr('height', 90)
-//         .attr("xlink:href", "button.png")
-//         .style("opacity", 0)
-// 		.transition()
-// 		.delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//  		.duration(100) //controls how fast is changes opacity
-// 		.style("opacity", 1.0); 
-
-//             canvas.append("text")
-//               .attr("x", width - 230)//+30
-//               .attr("y", 75)//+55
-//               .text("SHOW ME THE £$")
-//               .style("font", "25px 'stellar'")
-//               .style("fill", "black")
-// 		      .style("opacity", 0)
-// 			  .transition()
-// 			  .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-// 		 	  .duration(100) //controls how fast is changes opacity
-// 			  .style("opacity", 1.0); 
-
-//         svg.on('click', function() {
-//   		//console.log("You clicked")
-// 		adFact();
-// 		});
-
-// }// end of page likes function
-
-// //==============================================================
 
 //SCREEN 5
 //==============================================================
@@ -533,11 +439,6 @@ document.getElementById('login').style.visibility = 'none';
         .text("NAME:" + " " + response.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-        // .duration(1000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
       canvas.append("text")
         .attr("x", 50)
@@ -545,11 +446,6 @@ document.getElementById('login').style.visibility = 'none';
         .text("USER ID:" + " " + response.id)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-        // .duration(2000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
       canvas.append("text")
         .attr("x", 50)
@@ -557,11 +453,6 @@ document.getElementById('login').style.visibility = 'none';
         .text("DATE OF BIRTH:" + " " + response.birthday)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-        // .duration(4000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
       canvas.append("text")
         .attr("x", 50)
@@ -569,11 +460,6 @@ document.getElementById('login').style.visibility = 'none';
         .text("GENDER:" + " " + response.gender)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 200*i; }) //controls how many come on the screen
-        // .duration(6000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
 console.log(response.hometown); 
      var homeInfo = response.hometown; 
@@ -583,11 +469,6 @@ console.log(response.hometown);
         .text("HOMETOWN:" + " " + homeInfo.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black"); 
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-        // .duration(8000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
       canvas.append("text")
         .attr("x", 50)
@@ -595,11 +476,6 @@ console.log(response.hometown);
         .text("LOCATION:" + " " + response.location.name)
         .style("font", "30px 'stellar'")
         .style("fill", "black");
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-        // .duration(10000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
       canvas.append("text")
         .attr("x", 50)
@@ -607,170 +483,8 @@ console.log(response.hometown);
         .text("PROFILE PICTURE:")
         .style("font", "30px 'stellar'")
         .style("fill", "black"); 
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-        // .duration(12000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
 
         document.getElementById('status').innerHTML = "<img class = img src='" + response.picture.data.url + "'>";
-
-//next Y value needs to be *10 
-
-
-//----- not accepted via fb review 
-
-      // canvas.append("text")
-      //   .attr("x", 50)
-      //   .attr("y", (yStart + (spacer*10)))
-      //   .text("YOUR GROUPS: ")
-      //   .style("font", "30px 'stellar'")
-      //   .style("fill", "black"); 
-      //   // .style("opacity", 0)
-      //   // .transition()
-      //   // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-      //   // .duration(14000) //controls how fast is changes opacity
-      //   // .style("opacity", 1.0);
-
-
-// console.log(response.groups); 
-//         var groupInfo = response.groups;  
-//         var groupInfo2 = groupInfo.data; 
-//         var yG = 1; 
-
-//         for (var i = 0; i < groupInfo2.length; i++) {
-//           //console.log(groupInfo2[i].name);
-//           yG++; 
-
-//       canvas.append("text")
-//         .attr("x", 100)
-//         .attr("y", (yStart + (spacer*10))+(yG*50))
-//         .text(groupInfo2[i].name)
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(16000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-//         }//end of for loop for group api
-
-//       canvas.append("text")
-//         .attr("x", 50)
-//         .attr("y", (yStart + (spacer*35)))//needs to calculate space that was taken up above
-//         .text("YOU WATCH: ")
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black");
-//         // .style("opacity", 0); 
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(18000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-
-//         var teleInfo = response.television;    
-//         var teleInfo2 = teleInfo.data; 
-//         var yT = 1; 
-
-//         for (var t = 0; t < teleInfo2.length; t++) {
-//           //console.log(teleInfo2[t].name);
-//           yT++;
-
-//       canvas.append("text")
-//         .attr("x", 100)
-//         .attr("y", (yStart + (spacer*35))+(yT*50))
-//         .text(teleInfo2[t].name)
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(20000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-//         //console.log(yT);
-//         }//end of for loop for tv api
-
-//       canvas.append("text")
-//         .attr("x", 50)
-//         .attr("y", (yStart + (spacer*77)))//needs to calculate space that was taken up above
-//         .text("YOU LIKE: ")
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(22000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-
-//       var likesInfo = response.likes;   
-//       var likesInfo2 = likesInfo.data; 
-//       var yL = 1; 
-
-//       for (var l = 0; l < likesInfo2.length; l++) {
-//       yL++; 
-
-//       canvas.append("text")
-//         .attr("x", 100)
-//         .attr("y", (yStart + (spacer*77))+(yL*50))
-//         .text(likesInfo2[l].name)
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(24000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-//         //console.log(yL);
-//         }//end of for loop for likes api 
-
-//         canvas.append("text")
-//         .attr("x", 50)
-//         .attr("y", (yStart + (spacer*180))+50)//needs to calculate space that was taken up above
-//         .text("YOU'VE BEEN: ")
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(26000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-
-//     var tagInfo = response.tagged_places; 
-//     var tagInfo2 = tagInfo.data; 
-//     var yTP = 1; 
-
-//     for (var tP = 0; tP < tagInfo2.length; tP++) {
-//     yTP++; 
-//     var tagInfo3 = tagInfo2[tP].place; 
-//     // console.log(tagInfo3); 
-//     // console.log(tagInfo3.name + ' ' + tagInfo3.location.longitude + ' ' +  tagInfo3.location.latitude);
-
-//       canvas.append("text")
-//         .attr("x", 100)
-//         .attr("y", (yStart + (spacer*180))+(yTP*80))
-//         .text(tagInfo3.name)
-//         .style("font", "30px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(28000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-
-//       canvas.append("text")
-//         .attr("x", 100)
-//         .attr("y", (yStart + (spacer*180))+(yTP*80)+20)
-//         .text("LONGITUDE: " + tagInfo3.location.longitude + " " + "," + " " + "LATITUDE: " + tagInfo3.location.latitude)
-//         .style("font", "10px 'stellar'")
-//         .style("fill", "black"); 
-//         // .style("opacity", 0)
-//         // .transition()
-//         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-//         // .duration(30000) //controls how fast is changes opacity
-//         // .style("opacity", 1.0);
-
-//         }//end of for loop for tagged places
-
-//----- END: not accepted via fb review 
 
     var friendsInfo = response.friends;
     var friendsInfo2 = friendsInfo.summary;
@@ -782,12 +496,6 @@ console.log(response.hometown);
         .text("YOUR INFLUENCE: ")
         .style("font", "30px 'stellar'")
         .style("fill", "black"); 
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-        // .duration(32000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
-
 
         canvas.append("text")
         .attr("x", 100)
@@ -795,41 +503,6 @@ console.log(response.hometown);
         .text("FRIEND COUNT: " + friendsInfo2.total_count)
         .style("font", "30px 'stellar'")
         .style("fill", "black"); 
-        // .style("opacity", 0)
-        // .transition()
-        // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
-        // .duration(34000) //controls how fast is changes opacity
-        // .style("opacity", 1.0);
-
-
-        //for loop controlling the opacity -- fades in the words
-      // for(j=0; j < info.length; j++){
-      //   d3.selectAll("text")
-      //   .style("opacity", 0)
-      //   .transition()
-      //   .delay(function(d,i){ return 700*i; }) //controls how many come on the screen
-      //   .duration(100) //controls how fast is changes opacity
-      //   .style("opacity", 1.0)
-      // }
-
-  //     var newButton = canvas.append("svg:image")
-  //       .attr('x', 50)
-  //       .attr('y', (yStart + (spacer*195)) + 150) 
-  //       .attr('width', 180)
-  //       .attr('height', 90)
-  //       .attr("xlink:href", "button.png");
-
-  //           canvas.append("text")
-  //             .attr("x", 93)//+30
-  //             .attr("y", (yStart + (spacer*195)) + 205)
-  //             .text("CONTINUE")
-  //             .style("font", "25px 'stellar'")
-  //             .style("fill", "black");
-
-  //   	svg.on('click', function() {
-  // 		console.log("You clicked")
-  //     endVis(); 
-		// });
 
       });//end of api function 
 
@@ -876,15 +549,6 @@ function endVis(){
 
 function fbLogout() {
 
-  //   FB.getLoginStatus(function(response) {
-  //   console.log(response);
-  //   if (response && response.status === 'connected') {
-  //     FB.logout(function(response) {
-  //       window.location.reload();
-  //     });
-  //   }
-  // });
-
         FB.logout(function (response) {
             //Do what ever you want here when logged out like reloading the page
             window.location.reload();
@@ -898,7 +562,6 @@ function fbLogout() {
 // ========================= END =============================
 
 
-//<button class = "button2" id="logout" onclick = "logout()">Logout</button>
 
 </script>
 
