--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@ function fbLogout() {
 <fb:login-button
 id="login" 
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
-
-onclick = "window.reload();" >
+onclick = "checkLoginState();" >
 </fb:login-button>
 
 <!-- <button 
