--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Exhibition</title>
   <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
-     <style>
+     <style media="screen">
+
       /* Make the chart container fill the page using CSS. */
       #chart {
         position: fixed;
