--- a/index.html
+++ b/index.html
@@ -555,6 +555,13 @@ function page3(){
       .attr("transform", function (d) {
           return "translate(" + 500 + "," + 500 + ")";}); 
 
+      var text = canvas.append("text")
+        .attr("x", 10)
+        .attr("y", 100)
+        .text("YOU'VE BEEN PROCESSED,YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED")
+      .style("font", "10px 'stellar'")
+      .style("fill", "black");
+
 } //end of page3 function 
 
 
