--- a/index.html
+++ b/index.html
@@ -544,6 +544,21 @@ function page3(){
         .attr("height", 10300) //needs to be depended on data height of each person
         .style("fill", "white");
 
+   
+    var rect = canvas.append("rect")
+      .attr("x", 50)
+      .attr("y", 100)
+      .attr("width", 200)
+      .attr("height" 1000)
+      .style("fill", "black"); 
+
+    canvas.append("rect")
+      .attr("x", 100)
+      .attr("y", 100)
+      .attr("width", 200)
+      .attr("height" 1000)
+      .style("stroke", "black"); 
+
     var circle = canvas.append("circle")
       .attr("transform", function (d) {
           return "translate(" + 500 + "," + 200 + ")";})
@@ -551,7 +566,7 @@ function page3(){
       .style("fill", "black")
       .transition()
       .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
-      .duration(500) //controls how fast is changes opacity
+      .duration(1000) //controls how fast is changes opacity
       .attr("transform", function (d) {
           return "translate(" + 500 + "," + 500 + ")";}); 
 
