--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ function page3(){
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
-        .attr("height", 10300) //needs to be depended on data height of each person
+        .attr("height", 1000) //needs to be depended on data height of each person
         .style("fill", "white");
 
    
@@ -552,7 +552,7 @@ function page3(){
       .attr("height" 1000)
       .style("fill", "black"); 
 
-    canvas.append("rect")
+    var rect = canvas.append("rect")
       .attr("x", 100)
       .attr("y", 100)
       .attr("width", 200)
