--- a/index.html
+++ b/index.html
@@ -541,23 +541,16 @@ function page3(){
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
-        .attr("height", 1000) //needs to be depended on data height of each person
+        .attr("height", 10300) //needs to be depended on data height of each person
         .style("fill", "white");
 
    
-    var rect = canvas.append("rect")
+  canvas.append("rect")
       .attr("x", 50)
       .attr("y", 100)
       .attr("width", 200)
       .attr("height" 1000)
-      .style("fill", "black"); 
-
-    var rect = canvas.append("rect")
-      .attr("x", 100)
-      .attr("y", 100)
-      .attr("width", 200)
-      .attr("height" 1000)
-      .style("stroke", "black"); 
+      .style("fill", "black")
 
     var circle = canvas.append("circle")
       .attr("transform", function (d) {
