--- a/index.html
+++ b/index.html
@@ -547,16 +547,16 @@ function page3(){
     canvas.append("rect")
       .attr("x", 50)
       .attr("y", 100)
-      .attr("width", 200)
+      .attr("width", 500)
       .attr("height", 800)
       .style("fill", "black"); 
 
     canvas.append("rect")
       .attr("x", 200)
       .attr("y", 100)
-      .attr("width", 200)
+      .attr("width", 500)
       .attr("height", 800)
-      .style("stroke", "black"); 
+      .style("stroke", "steelBlue"); 
 
     var circle = canvas.append("circle")
       .attr("transform", function (d) {
