--- a/index.html
+++ b/index.html
@@ -531,6 +531,8 @@ function endVis(){
 
 function page3(){
 
+  document.getElementById('next').style.visibility = 'hidden';
+
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 
@@ -553,7 +555,7 @@ function page3(){
 
     canvas.append("rect")
       .attr("x", 200)
-      .attr("y", 100)
+      .attr("y", 80)
       .attr("width", 500)
       .attr("height", 800)
       .style("stroke", "steelBlue"); 
