--- a/index.html
+++ b/index.html
@@ -554,10 +554,11 @@ function page3(){
       .style("fill", "black"); 
 
     canvas.append("rect")
-      .attr("x", 200)
-      .attr("y", 50)
+      .attr("x", 70)
+      .attr("y", 80)
       .attr("width", 500)
       .attr("height", 600)
+      .style("fill", "white")
       .style("stroke", "steelBlue"); 
 
     var circle = canvas.append("circle")
