--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ var spaceT = 1;
 
       canvas.append("text")
         .attr("x", 60)
-        .attr("y", 120 + (10*tSpace) + 15)
+        .attr("y", 120 + (10*tSpace) + 30)
         .text(names[j])
         .style("font", "15px 'stellar'")
         .style("fill", "white");  
@@ -608,25 +608,25 @@ function statement(){
       .style("fill", "black");
 
 
-      var button4 = canvas.append("svg:image")
-        .attr('x', 30)
-        .attr('y', 300)
-        .attr('width', 300)
-        .attr('height', 90)
-        .attr("xlink:href", "button.png");
+    //   var button4 = canvas.append("svg:image")
+    //     .attr('x', 30)
+    //     .attr('y', 300)
+    //     .attr('width', 300)
+    //     .attr('height', 90)
+    //     .attr("xlink:href", "button.png");
 
-            canvas.append("text")
-              .attr("x", 90)//+30
-              .attr("y", 355)//+55
-              .text("WHO ARE MY AD'S?")
-              .style("font", "25px 'stellar'")
-              .style("fill", "black");
+    //         canvas.append("text")
+    //           .attr("x", 90)//+30
+    //           .attr("y", 355)//+55
+    //           .text("WHO ARE MY AD'S?")
+    //           .style("font", "25px 'stellar'")
+    //           .style("fill", "black");
 
 
-      svg.on('click', function() {
-      //console.log("You clicked")
-    pageLikes(); 
-    });
+    //   svg.on('click', function() {
+    //   //console.log("You clicked")
+    // pageLikes(); 
+    // });
 
 }// end of statement function
 
