--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ var spaceT = 1;
       .attr("y", 120)
       .text("Companies and Advertisers can also access your: " )
       .style("font", "15px 'stellar'")
-      .style("fill", "white");
+      //.style("fill", "white");
 
   var names = [ '- Likes',  '- Groups (even private ones)','- Friend lists','- External websites that you redirected to from facebook', '- Tagged Locations', '- Your current location (remember when you allowed gps access)'  ];
 
