--- a/index.html
+++ b/index.html
@@ -491,6 +491,8 @@ function page3(){
 
   document.getElementById('next').style.visibility = 'hidden';
 
+  document.getElementById('next2').style.visibility = 'visible';
+
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 
