--- a/index.html
+++ b/index.html
@@ -586,6 +586,10 @@ var spaceT = 1;
 
 function statement(){
 
+  
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+
   document.getElementById('status').style.visibility = 'hidden';
     var rect = canvas.append("rect")
         .attr("x", 0)
