--- a/index.html
+++ b/index.html
@@ -587,6 +587,8 @@ var spaceT = 1;
 function statement(){
 
 
+  document.getElementById('next2').style.visibility = 'hidden';
+
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 
